--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,40 @@
-<header class="bg-black text-white px-4 py-3 shadow-md">
-  <div class="max-w-7xl mx-auto flex flex-col md:flex-row md:items-center md:justify-between gap-4">
-    <div class="flex items-center gap-3">
-      <img src="assets/img/logo.png" alt="Logo" class="w-8 h-8 text-yellow-500" />
-      <div>
-        <h1 class="text-lg font-bold leading-tight">Roll<br />The<br />Credits</h1>
-        <p class="text-yellow-500 text-sm hidden sm:block">Que a crítica esteja com você!</p>
-      </div>
+<header id="header" class="bg-[#2A2A2A] border-gray-200">
+    <div class="flex items-center justify-between max-w-screen-xl mx-auto p-4">
+        
+        <a href="" routerLink="" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <div>
+                <img src="assets/img/logo.png" class="h-8" alt="Roll The Credits" />
+            </div>
+            <div>
+                <span class="self-center text-lg font-semibold whitespace-nowrap">Roll The Credits</span>
+                <p class="text-sm">Que a crítica esteja com você !</p>
+            </div>
+        </a>
+
+        <nav class="flex-1">
+            <ul id="menu" class="flex justify-center space-x-8 rtl:space-x-reverse sm:text-base">
+                <li><a href="" routerLink="" class="hover:underline">Home</a></li>
+                <li><a href="" routerLink="" class="hover:underline">Filmes</a></li>
+                <li><a href="about" routerLink="about" class="hover:underline">Sobre Nós</a></li>
+            </ul>
+        </nav>
+
+        <div  id="mdlogin" class="flex space-x-6 rtl:space-x-reverse ml-auto">
+            <div *ngIf="!user">
+                <a href="login" routerLink="login">
+                    <button type="button" class="btn rounded bg-[#D4A55D] px-4 py-2 text-sm font-semibold hover:bg-yellow-500 hover:underline">Login/Cadastro</button>
+                </a>
+            </div>
+
+            <div *ngIf="user">
+                <a href="profile" routerLink="profile">
+                    <button type="button" class="btn rounded bg-[#D4A55D] px-4 py-2 text-sm font-semibold hover:bg-yellow-500 hover:underline">Perfil</button>
+                </a>
+                <a href="login" routerLink="login">
+                    <button type="button" class="btn rounded bg-[#D4A55D] px-4 py-2 text-sm font-semibold hover:bg-yellow-500 hover:underline">Sair</button>
+                </a>
+            </div>
+        </div>
     </div>
-    <nav>
-      <ul class="flex flex-wrap gap-4 justify-center text-sm md:text-base">
-        <li><a routerLink="/" class="hover:text-yellow-400 transition">Home</a></li>
-        <li><a routerLink="/filmes" class="hover:text-yellow-400 transition">Filmes</a></li>
-        <li><a routerLink="/noticias" class="hover:text-yellow-400 transition">Notícias</a></li>
-        <li><a routerLink="/upcoming" class="hover:text-yellow-400 transition">Login</a></li>
-      </ul>
-    </nav>
-  </div>
 </header>
+<hr>
